# vyos-cloudinit

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
debian/: README  changelog  control  copyright  lintian  rules
etc/init.d/: vyos-cloudinit  vyos-ssh-key
examples/: change-hostname.sh  config.change-hostname
examples/etc/init.d/: vyos-cloudinit
scripts/: vyos-cloudinit  vyos-ssh-key
sysconf/vyos-cloudinit/: ec2.conf  openstack.conf
templates-cfg/service/cloudinit/: node.def
templates-cfg/service/cloudinit/environment/: node.def
templates-cfg/service/cloudinit/ssh-key/: node.def
templates-cfg/service/cloudinit/ssh-user/: node.def
templates-cfg/service/cloudinit/user-data/: node.def
